--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
 <title>
-The title of the webpage
+MinJia's Webpage
 </title>
 </head>
 <body>
-<h1>This is my Heading</h1>
+<h1>This is my website</h1>
 This is where information to be presented to the user is entered.
+<button>yay</button>
 </body>
 </html>
