--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ MinJia's Webpage
 <h1>This is my website</h1>
 This is where information to be presented to the user is entered.
 
-<button>yay</button>
+<button type: "button" onclick = "alert"("this is the yay alert")>yay</button>
 </body>
 </html>
