--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
 <title>
-The title of the webpage
+Min Jia's webpage
 </title>
 </head>
 <body>
 <h1>This is my Heading</h1>
+<h2>This is the second heading<h2>
 This is where information to be presented to the user is entered.
 <button type: "button" onclick = "alert"("this is the yay alert")>yay</button>
 </body>
