--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@ MinJia's Webpage
 <h1>This is my website</h1>
 This is where information to be presented to the user is entered.
 <h2>Second Heading<h2>
+<p> This is an unordered list</p>
+  <ul>
+  <li>First</ls>
+  <li>Second</ls>
+</ul>
+  
+<p>This is an ordered list</p>
+  <ol>
+    <li>ordered</li>
+    <li>unordered</li>
+    
+  </ol>
 
 <button type: "button" onclick = "alert"("this is the yay alert")>yay</button>
 </body>
