--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@ Min Jia's webpage
 <h2>This is the second heading<h2>
 This is where information to be presented to the user is entered.
 <button type: "button" onclick = "alert"("this is the yay alert")>yay</button>
+  <p> This is an unordered list</p>
+  <ul>
+  <li>First</ls>
+  <li>Second</ls>
+</ul>
+  
+<p>This is an ordered list</p>
+  <ol>
+    <li>ordered</li>
+    <li>unordered</li>
+    
+  </ol>
 </body>
 </html>
