--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 MinJia's Webpage
 </title>
 </head>
-<body>
+<body bgcolor = "red">
+  
 <h1>This is my website</h1>
 This is where information to be presented to the user is entered.
 <h2>Second Heading<h2>
