--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ MinJia's Webpage
   
 <h1>This is my website</h1>
 This is where information to be presented to the user is entered.
-<h2>Second Heading<h2>
-<p> This is an unordered list</p>
+<h2>Second Heading</h2>
+<p> Th/is is an unordered list</p>
   <ul>
-  <li>First</ls>
-  <li>Second</ls>
+  <li>First</li>
+  <li>Secondiii</li>
 </ul>
   
 <p>This is an ordered list</p>
@@ -21,7 +21,8 @@ This is where information to be presented to the user is entered.
     <li>unordered</li>
     
   </ol>
+<a href = "https://dunmanhigh.moe.edu.sg/">Visit google</a>
 
-<button type: "button" onclick = "alert"("this is the yay alert")>yay</button>
+<button type="button">Click Me!</button>
 </body>
 </html>
