--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 MinJia's Webpage
 </title>
 </head>
-<body bgcolor = "red">
+<body bgcolor = "yellow">
   
 <h1>This is my website</h1>
 This is where information to be presented to the user is entered.
@@ -22,6 +22,10 @@ This is where information to be presented to the user is entered.
     
   </ol>
 <a href = "https://dunmanhigh.moe.edu.sg/">Visit google</a>
+
+<a href = "https://www.google.com">
+   <button type = "button">Click</button>
+</a>
 
 <button type="button">Click Me!</button>
 </body>
