--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<html>
 <head>
 <title>
 MinJia's Webpage
@@ -12,7 +11,7 @@ This is where information to be presented to the user is entered.
 <p> Th/is is an unordered list</p>
   <ul>
   <li>First</li>
-  <li>Secondiii</li>
+  <li>Second</li>
 </ul>
   
 <p>This is an ordered list</p>
@@ -21,12 +20,17 @@ This is where information to be presented to the user is entered.
     <li>unordered</li>
     
   </ol>
-<a href = "https://dunmanhigh.moe.edu.sg/">Visit google</a>
+<a href = "https://dunmanhigh.moe.edu.sg/">Go to Dunman High School</a>
+<p> </p>
 
 <a href = "https://www.google.com">
-   <button type = "button">Click</button>
+   <button type = "button">Click to go to google</button>
 </a>
 
-<button type="button">Click Me!</button>
+<a href = "https://www.google.com">
+   <image src = "Screenshot (1).png">
+</a>
+
+
 </body>
 </html>
