--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,10 @@
+<title>
+MinJia's second Webpage
+</title>
+</head>
+<body bgcolor = "blue">
+  
+<h1>This is my second website</h1>
 
+</body>
+</html>
