--- a/main1.html
+++ b/main1.html
@@ -1,6 +1,37 @@
-<html>
-  <head>
+<head>
+<title>
+MinJia's Webpage
+</title>
+</head>
+<body bgcolor = "yellow">
   
+<h1>This is my website</h1>
+This is where information to be presented to the user is entered.
+<h2>Second Heading</h2>
+<p> Th/is is an unordered list</p>
+  <ul>
+  <li>First</li>
+  <li>Second</li>
+</ul>
   
-  
+<p>This is an ordered list</p>
+  <ol>
+    <li>ordered</li>
+    <li>unordered</li>
+    
+  </ol>
+<a href = "https://dunmanhigh.moe.edu.sg/">Go to Dunman High School</a>
+<p> </p>
+
+<a href = "https://www.google.com">
+   <button type = "button">Click to go to google</button>
+</a>
+
+<a href = "https://www.google.com">
+   <image src = "Screenshot (1).png"></image> 
+</a>
+
+<iframe src="https://youtu.be/t2ByLmLnYJ8"></iframe>
+
+</body>
 </html>
