--- a/main1.html
+++ b/main1.html
@@ -3,6 +3,8 @@
 MinJia's Webpage
 </title>
 </head>
+<link rel="style1" type="text/css" href="style1.css">
+
 <body bgcolor = "yellow">
   
 <h1>This is my website</h1>
